; ModuleID = '/home/carl/AnghaBench/lab/q3map2/q3map2/extr_map.c_TextureAxisFromPlane.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/q3map2/extr_map.c_TextureAxisFromPlane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@baseaxis = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TextureAxisFromPlane(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i64 0, i64* %9, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %10, align 4
  br label %11

11:                                               ; preds = %35, %3
  %12 = load i32, i32* %10, align 4
  %13 = icmp slt i32 %12, 6
  br i1 %13, label %14, label %38

14:                                               ; preds = %11
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** @baseaxis, align 8
  %19 = load i32, i32* %10, align 4
  %20 = mul nsw i32 %19, 3
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %18, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = call i64 @DotProduct(i32 %17, i32 %23)
  store i64 %24, i64* %8, align 8
  %25 = load i64, i64* %8, align 8
  %26 = sitofp i64 %25 to float
  %27 = load i64, i64* %9, align 8
  %28 = sitofp i64 %27 to float
  %29 = fadd float %28, 0x3F1A36E2E0000000
  %30 = fcmp ogt float %26, %29
  br i1 %30, label %31, label %34

31:                                               ; preds = %14
  %32 = load i64, i64* %8, align 8
  store i64 %32, i64* %9, align 8
  %33 = load i32, i32* %10, align 4
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %31, %14
  br label %35

35:                                               ; preds = %34
  %36 = load i32, i32* %10, align 4
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %10, align 4
  br label %11

38:                                               ; preds = %11
  %39 = load i32*, i32** @baseaxis, align 8
  %40 = load i32, i32* %7, align 4
  %41 = mul nsw i32 %40, 3
  %42 = add nsw i32 %41, 1
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %39, i64 %43
  %45 = load i32, i32* %44, align 4
  %46 = load i32, i32* %5, align 4
  %47 = call i32 @VectorCopy(i32 %45, i32 %46)
  %48 = load i32*, i32** @baseaxis, align 8
  %49 = load i32, i32* %7, align 4
  %50 = mul nsw i32 %49, 3
  %51 = add nsw i32 %50, 2
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i32, i32* %48, i64 %52
  %54 = load i32, i32* %53, align 4
  %55 = load i32, i32* %6, align 4
  %56 = call i32 @VectorCopy(i32 %54, i32 %55)
  ret void
}

declare dso_local i64 @DotProduct(i32, i32) #1

declare dso_local i32 @VectorCopy(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
